--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "@next/font": "13.1.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
+    "@types/react-date-range": "^1.4.4",
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.3",
+    "date-fns": "^2.29.3",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
+    "formik": "^2.2.9",
     "next": "13.1.3",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
-    "typescript": "4.9.4"
+    "react-select": "^5.7.0",
+    "typescript": "4.9.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -30,6 +36,7 @@
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.5.15",
@@ -39,6 +46,7 @@
     "babel-loader": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.10",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "tsconfig-paths-webpack-plugin": "^4.0.0"
   }
 }
