--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.3",
+    "@react-spring/web": "9.5.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-date-range": "^1.4.4",
@@ -21,6 +22,7 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.3",
     "formik": "^2.2.9",
+    "framer-motion": "^8.5.2",
     "next": "13.1.3",
     "react": "18.2.0",
     "react-date-range": "^1.4.0",
@@ -42,6 +44,8 @@
     "@storybook/react": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.10",
